* Added a new mixin flip to flip an element on it's x/y/both axis's
* Added new css helpers:
    - .flip-x
    - .flip-y
    - .flip-both
* Fix bug with anchor transition speed using wrong variable
* Three new variables have been created to control transitions:
    - $link-transition
    - $button-transition
    - $input-transition

* BREAKING CHANGES
    - Mixin 'abs-position' renamed to 'position' and has additional optional parameter $position
        - @mixin position($top: auto, $right: auto, $bottom: auto, $left: auto, $position: absolute)
    - Mixin 'vertical-align' has been replaced with 'centerer'
        - @mixin centerer($horizontal: true, $vertical: true, $position: absolute)

* DEPRECIATED VARIABLES 
    - $link-transition-speed
    - $button-transition-speed
    - $input-transition-speed

1.6.2 - 02-Jan-2018
~~~~~~~~~~~~~~~~~~~

* Remove font size in code element
* Remove bottom margin on last child of blockquote

1.6.1 - 13-Dec-2017
~~~~~~~~~~~~~~~~~~~~~~

* Refactor img-fluid to use a mixin

1.6.0 - 23-Nov-2017
~~~~~~~~~~~~~~~~~~~

* Added content columns mixin
* Added code font to all code, kbd, pre, samp elements

1.5.1 - 23-Oct-2017
~~~~~~~~~~~~~~~~~~~

* Added .no-print helper

1.5.0 - 02-Oct-2017
~~~~~~~~~~~~~~~~~~~

* Added mixin responsive-ratio
* Removed margin top from pre
* Added modernizr mixin for touch-hover
* Added modernizr mixin for transition-no-touch
* Added animation speeds for forms, links & buttons
* Added colour palette from http://clrs.cc/
* Added colour palette for social media from https://www.materialui.co/socialcolors
* Added .h1 > .h6

1.4.1 - 21-Sep-2017
~~~~~~~~~~~~~~~~~~~

* Added $code-font-family variable

1.4.0 - 20-Sep-2017
~~~~~~~~~~~~~~~~~~~

* Added 4 new mixin to build inputs:
    - input
    - input-width
    - input-size
    - input-focus
* Added 1 new mixin to build buttons:
    - button-size
* Added some default values to the mixin button-hover
* Added a transition to input focus