@@ -15,6 +15,7 @@ Changelog
     - $link-transition
     - $button-transition
     - $input-transition
+* ul and ol styles are now in the variables
 
 * BREAKING CHANGES
     - Mixin 'abs-position' renamed to 'position' and has additional optional parameter $position
